--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,20 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$main-background-color: #FFF;
+$secondary-background-color: #EEEEEE;
+
+$main-text-color: #000;
+$secondary-text-color: #410B13;
+
+$category-un-color: #5D2B7D; 
+$category-fun-color: #A72D89; // Catégorie Fun : a trouvé
+$category-sport-color: #1474BB; // Catégorie Sport : a trouvé
+$category-health-color: #8FC33E; // Catégorie Santé : carie
+$category-food-color: #F1BE02; // Catégorie Nouriture : miam
+$category-economy-color: #E41E26; // Catégorie Economie : ça coute bonbon
+
+$main-border: 0.5rem;
+$small-border: 1rem;
+$big-border: 2rem;
