--- a/src/app/components/articles/article-type2/article-type2.component.html
+++ b/src/app/components/articles/article-type2/article-type2.component.html
@@ -1,4 +1,4 @@
-<div class="color">
+<div class="side-band">
     <div class="article-type2">
         <img src="https://media.istockphoto.com/id/516358950/fr/photo/partie-de-sucre-blanc.jpg?s=612x612&w=0&k=20&c=PQdHZX3hIDHlQQHHoHJNAGxyQun5ORH_4kXJteRYyUU=">
         <div class="description">
