--- a/src/app/components/articles/article-type2/article-type2.component.scss
+++ b/src/app/components/articles/article-type2/article-type2.component.scss
@@ -1,27 +1,32 @@
 @use "/src/styles.scss" as *;
-.color {
+.side-band {
     background-color: $category-health-color;
-}
-
-.article-type2 {
-    display:flex;
-    flex-direction:row;
     width:400px;
-    margin-left: 0.5rem;
-    background-color: white;
-}
+    
+    .article-type2 {
+        display:flex;
+        flex-direction:row;
+        width:400px;
+        margin-left: 0.5rem;
+        background-color: white;
 
-img {
-    height:164px;
-}
+        img {
+            height:164px;
+        }
+    
+        .description {
+            margin-left:1rem;
+            
+            h5 {
+                color:$category-health-color;
+                font-weight: normal;
+                margin-top:.5rem;
+                margin-bottom: .5rem;
+            }
+        }
+    
+    }
 
-.description {
-    margin-left:1rem;
-}
 
-h5 {
-    color:$category-health-color;
-    font-weight: normal;
-    margin-top:.5rem;
-    margin-bottom: .5rem;
+
 }
