--- a/src/app/components/articles/article-type3/article-type3.component.scss
+++ b/src/app/components/articles/article-type3/article-type3.component.scss
@@ -1,18 +1,22 @@
 @use "/src/styles.scss" as *;
-img {
-    width:100%;
-}
+.article-type3{
 
-.description {
-    background-color:$category-health-color;
-    box-sizing: border-box;
-    height:50px;
-    bottom:54px;
-    position:relative;
-    object-position: left bottom;
-    padding-left:.5rem;
-}
+    img {
+        width:100%;
+    }
 
-h6,h5 {
-    margin:0px;
+    .description {
+        background-color:$category-health-color;
+        box-sizing: border-box;
+        height:50px;
+        bottom:54px;
+        position:relative;
+        object-position: left bottom;
+        padding-left:.5rem;
+
+        h6,h5 {
+            margin:0px;
+        }
+    }
+
 }
