--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
                 <li><a id="carie" [routerLink]="['/sante']">Carie</a></li>
                 <li><a id="miam" [routerLink]="['/gastronomie']">Miam</a></li>
                 <li><a id="money" [routerLink]="['/economie']">Ca_coute_bonbon</a></li>
-                <li><a id="login" [routerLink]="['/login']">Comptes</a></li>
+                <li><a id="login" [routerLink]="['/login']">Connexion</a></li>
                 <li></li>
             </ul>
         </nav>
