--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,9 @@
+@use "/src/styles.scss" as *;
+
 footer {
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-start;
     background-color: #FECEE9;
-    color: #410B13;
+    color: $secondary-text-color;
 }
