Update header.component.scss > pas de morceau de sucre  ...

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -85,7 +85,7 @@ nav ul li :hover {
 }
 
 .categ {
-    background-image: image-set("/assets/images/ti_sucre.png");
+   // background-image: image-set("/assets/images/ti_sucre.png");
     background-repeat: no-repeat;
 }
 
