Changes made on html tags and on heading hierarchy

--- a/src/app/components/articles/article-type-main/article-type-main.component.html
+++ b/src/app/components/articles/article-type-main/article-type-main.component.html
@@ -1,11 +1,11 @@
 
-<div class="article-type1">
+<article class="main-type1">
     <img src="https://media.istockphoto.com/id/516358950/fr/photo/partie-de-sucre-blanc.jpg?s=612x612&w=0&k=20&c=PQdHZX3hIDHlQQHHoHJNAGxyQun5ORH_4kXJteRYyUU=">
     <div class="blur">
         <div class="description">
-            <h2>Sweet !</h2>
-            <h4>Le sucre c'est trop bien</h4>
-            <h6>Il y a 1 heure</h6>
+            <h4>Sweet !</h4>
+            <h2>Le sucre c'est trop bien</h2>
+            <time>Il y a 1 heure</time>
         </div>
     </div>
-</div>
+</article>
