--- a/src/app/components/articles/article-type-side/article-type-side.component.html
+++ b/src/app/components/articles/article-type-side/article-type-side.component.html
@@ -1,9 +1,11 @@
-<div class="side-band">
-    <div class="article-type2">
+
+<article class="main-type2">
+    <div class="side-band">
         <img src="https://media.istockphoto.com/id/516358950/fr/photo/partie-de-sucre-blanc.jpg?s=612x612&w=0&k=20&c=PQdHZX3hIDHlQQHHoHJNAGxyQun5ORH_4kXJteRYyUU=">
         <div class="description">
-            <h5>15:17 | Sweet</h5>
-            <p>Comment les bienfaits du sucre se propagent à travers tout le corps</p>
+            <h4>15:17 | Sweet</h4>
+            <h3>Comment les bienfaits du sucre se propagent à travers tout le corps</h3>
         </div>
-    </div>    
-</div>
+    </div>
+</article>
+
