updated article html and css

--- a/src/app/components/articles/article/article.component.html
+++ b/src/app/components/articles/article/article.component.html
@@ -1,3 +1,6 @@
-<app-title></app-title>
-<app-body></app-body>
-<app-other></app-other>
+<app-article-title class="title"></app-article-title>
+<app-article-body class="body"></app-article-body>
+<div class="article-bottom">
+    <div class="comment">&nbsp;</div>
+    <app-article-other class="other"></app-article-other>
+</div>
