updated other article

--- a/src/app/components/articles/article/other/other.component.html
+++ b/src/app/components/articles/article/other/other.component.html
@@ -1,1 +1,16 @@
-<p>other works!</p>
+<section class="other">
+    <h2>Articles liés</h2>
+    <div class="article-list">
+      <div class="article">
+        <h3>Titre de l'article lié 1</h3>
+        <p>Description de l'article lié 1</p>
+        <p>IMAGE</p>
+      </div>
+      <div class="article">
+        <h3>Titre de l'article lié 2</h3>
+        <p>Description de l'article lié 2</p>
+        <p>IMAGE</p>
+      </div>
+    </div>
+  </section>
+  
