--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -8,7 +8,7 @@
   justify-content: center;
 
   .categories-category {
-    .categories-title {
+    .categories-header {
       display: flex;
       align-items: center;
       background-color: $main-background-color;
@@ -23,22 +23,15 @@
         padding-left: $small-border;
       }
 
-      p {
+      p:nth-of-type(2) {
         color: $secondary-text-color;
         font-size: 2em;
         padding: $small-border;
         margin: 0;
       }
 
-      a {
-
-        color: $secondary-text-color;
-        font-size: $small-border;
+      p:nth-of-type(1) {
         display: none;
-      }
-
-      a:hover {
-        color: $fairy-color;
       }
     }
   }
@@ -65,5 +58,79 @@
 
   #Fun-title {
     color: $category-fun-color;
+  }
+}
+
+@media screen and (min-width: 600px) and (orientation: landscape) {
+  #categories {
+    margin: $big-border;
+    height: 100%;
+    display: block;
+
+    .categories-category {
+      margin-bottom: $big-border;
+
+      &:hover {
+        #Food-header {
+          box-shadow: 0.5rem 0.5rem 10px $category-food-color;
+        }
+
+        #Health-header {
+          box-shadow: 0.5rem 0.5rem 10px $category-health-color;
+        }
+
+        #Economy-header {
+          box-shadow: 0.5rem 0.5rem 10px $category-economy-color;
+        }
+
+        #Sport-header {
+          box-shadow: 0.5rem 0.5rem 10px $category-sport-color;
+        }
+
+        #Fun-header {
+          box-shadow: 0.5rem 0.5rem 10px $category-fun-color;
+        }
+      }
+
+      .categories-header {
+        align-items: center;
+        transition: 0.3s ease-in-out;
+
+        h2 {
+          padding-left: 5%;
+        }
+
+        p:nth-of-type(2) {
+          display: none;
+        }
+
+        p:nth-of-type(1) {
+          display: initial;
+          color: $secondary-text-color;
+          font-size: 1.5rem;
+        }
+
+        p:nth-of-type(1):hover {
+          color: $fairy-color;
+        }
+      }
+    }
+
+    .categories-3articles {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      margin-top: $big-border;
+
+      article {
+        width: 30%;
+        height: 200px;
+        border: $fairy-color 1px solid;
+
+        &:hover {
+          border: $secondary-text-color 1px solid;
+        }
+      }
+    }
   }
 }
