--- a/src/app/components/articles/article/body/body.component.html
+++ b/src/app/components/articles/article/body/body.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="body">
     <h2>Introduction</h2>
     <p>Le caramel, ce délice sucré et collant, est un incontournable pour de nombreux amateurs de sucreries. Cependant,
         il suscite également un débat animé : faut-il l'apprécier sans retenue ou le mettre de côté pour éviter les
