--- a/src/app/components/articles/article/title/title.component.html
+++ b/src/app/components/articles/article/title/title.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="title">
     <div class="article">
         <h2>{{ article.title }}</h2>
         <div class="categories">
