--- a/src/app/components/articles/article/body/body.component.scss
+++ b/src/app/components/articles/article/body/body.component.scss
@@ -1,6 +1,6 @@
 @use "/src/styles.scss" as *;
 
-section {
+.body {
   background-color: $main-background-color;
   color: $main-text-color;
   padding-left: $big-border; 
