--- a/src/app/components/categories/category/category.component.html
+++ b/src/app/components/categories/category/category.component.html
@@ -1,1 +1,9 @@
-<p>category works!</p>
+<section id="category-main">
+  <div class="category-header">
+    <h2 [id]="categories[categoryID].name + '-title'">{{categories[categoryID].name}}</h2>
+    <p><strong>V</strong></p>
+  </div>
+  <div *ngFor="let i of Arr(20).fill(1)" class="category-articles">
+    <article class="category-article"></article>
+  </div>
+</section>
