SCSS avec imbrication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<body>
+    <app-header class="head"></app-header>
+    <router-outlet class="route" height="1000rem"></router-outlet>
+    <app-footer class="foot"></app-footer>
+</body>
