--- a/src/app/components/categories/category/category.component.scss
+++ b/src/app/components/categories/category/category.component.scss
@@ -52,7 +52,7 @@
   .category-articles {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     margin-top: $big-border;
 
     .category-article {
