fixes from sprint1

--- a/src/_import.scss
+++ b/src/_import.scss
@@ -3,8 +3,9 @@ $secondary-background-color: #EEEEEE;
 
 $main-text-color: #000;
 $secondary-text-color: #410B13;
+$fairy-color: #FECEE9;
 
-$category-un-color: #5D2B7D; 
+$category-un-color: #5D2B7D;
 $category-fun-color: #A72D89; // Catégorie Fun : a trouvé
 $category-sport-color: #1474BB; // Catégorie Sport : a trouvé
 $category-health-color: #8FC33E; // Catégorie Santé : carie
