modifs 19-20/06 suite debrief sprint n°1

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,10 +4,10 @@
 
     <nav id="smallscr">
         <ul>
-            <li><a id="accueil" [routerLink]="['/home']">Accueil</a></li>
-            <li><a id="api" [routerLink]="['/api']">Api</a></li>
-            <li><a class="categ" [routerLink]="['/categ']">Catégories</a></li>
-            <li><a id="login" [routerLink]="['/login']">Connexion</a></li>
+            <li><a id="accueil" [routerLink]="APP_ROUTES.index">Accueil</a></li>
+            <li><a id="api" [routerLink]="">Api</a></li>
+            <li><a class="categ" [routerLink]="">Catégories</a></li>
+            <li><a id="login" [routerLink]="">Connexion</a></li>
         </ul>
     </nav>
 
