routing const and getid fix

--- a/src/app/components/categories/category/category.component.html
+++ b/src/app/components/categories/category/category.component.html
@@ -1,6 +1,6 @@
 <section id="category-main">
   <div class="category-header">
-    <h1 [id]="categories[categoryID].slug + '-title'">{{categories[categoryID].name}}</h1>
+    <h1 [id]="categories[categoryID-1].slug + '-title'">{{categories[categoryID-1].name}}</h1>
     <p><strong>V</strong></p>
   </div>
   <div class="category-articles">
