replaced fake articles with real ones

--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -8,9 +8,9 @@
 
     <div class="categories-3articles">
       <!-- used to illustrate where the articles will be -->
-      <article></article>
-      <article></article>
-      <article></article>
+      <app-article-type-small></app-article-type-small>
+      <app-article-type-small></app-article-type-small>
+      <app-article-type-small></app-article-type-small>
     </div>
   </div>
 </section>
