--- a/src/app/components/categories/category/category.component.html
+++ b/src/app/components/categories/category/category.component.html
@@ -5,6 +5,6 @@
   </div>
   <div class="category-articles">
     <!-- used to illustrate where the articles will be -->
-    <article *ngFor="let i of arr(20).fill(1)" class="category-article"></article>
+    <app-article-type-small *ngFor="let i of arr(20).fill(1)" class="category-article"></app-article-type-small>
   </div>
 </section>
