--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -2,12 +2,13 @@
   <div class="categories-category" *ngFor="let category of categories">
     <a class="categories-header" [id]="category.slug + '-header'" routerLink="/categories/{{category.id}}">
       <h2 [id]="category.slug + '-title'">{{category.name}}</h2>
-      <p routerLink="/categories/{{category.id}}">Voir plus</p>
-      <p><strong>></strong></p>
+      <p routerLink="/categories/{{category.id}}">
+        <span>Voir plus</span>
+        <span>></span>
+      </p>
     </a>
 
     <div class="categories-3articles">
-      <!-- used to illustrate where the articles will be -->
       <app-article-type-small></app-article-type-small>
       <app-article-type-small></app-article-type-small>
       <app-article-type-small></app-article-type-small>
