--- a/src/app/components/categories/category/category.component.html
+++ b/src/app/components/categories/category/category.component.html
@@ -1,10 +1,11 @@
 <section id="category-main">
   <div class="category-header">
-    <h1 [id]="categories[categoryID-1].slug + '-title'">{{categories[categoryID-1].name}}</h1>
-    <p><strong>V</strong></p>
+    <h1 [id]="categories[categoryID-1].slug + '-title'">
+      <span>{{categories[categoryID-1].name}}</span>
+      <span>V</span>
+    </h1>
   </div>
   <div class="category-articles">
-    <!-- used to illustrate where the articles will be -->
     <app-article-type-small *ngFor="let i of arr(20).fill(1)" class="category-article"></app-article-type-small>
   </div>
 </section>
