--- a/src/app/components/categories/category/category.component.scss
+++ b/src/app/components/categories/category/category.component.scss
@@ -8,23 +8,28 @@
   justify-content: center;
 
   .category-header {
-    display: flex;
-    align-items: center;
-    padding: $small-border;
-    justify-content: space-between;
-
     h1 {
-      font-family: "Glam-queen";
-      font-size: 3em;
-      margin: 0;
-      padding-left: $small-border;
-    }
-
-    p {
-      color: $secondary-text-color;
-      font-size: 2em;
+      width: 100%;
+      display: flex;
+      align-items: center;
       padding: $small-border;
-      margin: 0;
+      justify-content: space-between;
+
+      span:nth-of-type(1) {
+        font-family: "Glam-queen";
+        font-size: 3em;
+        margin: 0;
+        padding-left: $small-border;
+      }
+
+      span:nth-of-type(2) {
+        color: $secondary-text-color;
+        font-size: 2em;
+        padding: $small-border;
+        margin: 0;
+        font-weight: bold;
+      }
+
     }
 
     #miam-title {
@@ -52,11 +57,11 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: $big-border;
+    margin-top: $main-border;
 
     .category-article {
       width: 95%;
-      height: 200px;
+      margin-bottom: $main-border;
       border: $fairy-color 1px solid;
       box-shadow: 10px 10px 10px $fairy-color;
       transition: 0.3s ease-in-out;
