--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <div>
         <nav>
             <ul class="divnav">
-                <li><a [routerLink]="APP_ROUTES.index">Accueil</a></li>
+                <li><a [routerLink]="APP_ROUTES.index">Accueil<i class="fas fa-home"></i></a></li>
                 <li><a class="categ" [routerLink]="APP_ROUTES.categories">Catégories</a></li>
                 <li><a id="fun" [routerLink]="APP_ROUTES.categories+'/1'">Hav'Fun</a></li>
                 <li><a id="sport" [routerLink]="APP_ROUTES.categories+'/2'">NRgy</a></li>
