--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @use "/src/_import.scss" as *;
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
 
 @font-face {
   font-family: "Mermaid-babies";
