--- a/src/app/components/articles/article-type-main/article-type-main.component.html
+++ b/src/app/components/articles/article-type-main/article-type-main.component.html
@@ -1,10 +1,10 @@
 <article class="main-type1">
-    <img src="https://media.istockphoto.com/id/516358950/fr/photo/partie-de-sucre-blanc.jpg?s=612x612&w=0&k=20&c=PQdHZX3hIDHlQQHHoHJNAGxyQun5ORH_4kXJteRYyUU=">
+    <img src={{article.publication_image}}>
     <div class="blur">
         <div class="description">
-            <h4>Sweet !</h4>
-            <h2>Le sucre c'est trop bien</h2>
-            <time>Il y a 1 heure</time>
+            <h4>{{article.categories[0].name}} !</h4>
+            <h2>{{article.title}}</h2>
+            <time>{{article.publication_date | date : 'medium'}}</time>
         </div>
     </div>
 </article>
