--- a/src/app/components/articles/article-type-small/article-type-small.component.html
+++ b/src/app/components/articles/article-type-small/article-type-small.component.html
@@ -1,9 +1,13 @@
 <article class="main-type3">
-    <img src="https://media.istockphoto.com/id/516358950/fr/photo/partie-de-sucre-blanc.jpg?s=612x612&w=0&k=20&c=PQdHZX3hIDHlQQHHoHJNAGxyQun5ORH_4kXJteRYyUU=">
+    <img src={{article.publication_image}}>
     <div class="description">
         <div class="titles">
-            <h4>SWEET</h4>
-            <h3>Manger trop de sucre donne des caries ? Une légende urbaine ?</h3>
+            <h4><span style="
+                background: black;
+                padding: 2px;
+            ">{{article.categories[0].name}}</span></h4>
+            <h3>{{article.title}}</h3>
+            <time>{{article.publication_date | date : 'fullDate'}}</time>
         </div>
     </div>
 </article>
