--- a/src/app/components/articles/article-type-small/article-type-small.component.scss
+++ b/src/app/components/articles/article-type-small/article-type-small.component.scss
@@ -22,10 +22,10 @@
     
             h4 {
                 color:$category-health-color;
-                background-color:$secondary-text-color ;
-                width:3.5rem;
-                margin-top:0.5rem;
-                padding-left:0.3rem;
+                //background-color:$secondary-text-color ;
+                //width:3.5rem;
+                //margin-top:0.5rem;
+                //padding-left:0.3rem;
             }
             h3 {
                 font-weight:500;
